all activity update

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="40dp"
     android:background="@drawable/bn"
-    tools:context=".LoginActivity">
+    tools:context=".view.LoginActivity">
 
 
     <TextView
