--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="30dp"
-    android:background="@drawable/bg"
-    tools:context=".RegisterActivity">
+    tools:context=".view.RegisterActivity">
 
 
     <TextView
