--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/profile"
+    <item android:id="@+id/profileFragment"
         android:title="Profile"
+        android:icon="@drawable/profile"
         />
     <item android:id="@+id/logout"
         android:title="Logout"
+        android:icon="@drawable/logout"
         />
     <item android:title="Friends"
-        android:id="@+id/friend"
+        android:id="@+id/freindsFragment"
         android:icon="@drawable/fnd"
         />
 </menu>
